WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105837
[Templates]: Fix assert in colgroup parse handling
https://bugs.webkit.org/show_bug.cgi?id=105837
Summary
[Templates]: Fix assert in colgroup parse handling
Rafael Weinstein
Reported
2012-12-28 11:46:21 PST
I woke up this morning and realized that I missed an assert in
r138537
.
Attachments
Patch
(2.80 KB, patch)
2012-12-28 11:48 PST
,
Rafael Weinstein
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rafael Weinstein
Comment 1
2012-12-28 11:48:56 PST
Created
attachment 180889
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-12-28 11:49:38 PST
Comment on
attachment 180889
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-12-28 12:28:57 PST
Comment on
attachment 180889
[details]
Patch Rejecting
attachment 180889
[details]
from commit-queue. New failing tests: inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html Full output:
http://queues.webkit.org/results/15551880
Eric Seidel (no email)
Comment 4
2012-12-28 12:37:43 PST
Looks like a flaky test causing EWS/CQ failures. :(
WebKit Review Bot
Comment 5
2012-12-28 13:08:44 PST
Comment on
attachment 180889
[details]
Patch Clearing flags on attachment: 180889 Committed
r138546
: <
http://trac.webkit.org/changeset/138546
>
WebKit Review Bot
Comment 6
2012-12-28 13:08:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug