[Templates]: Fix assert in colgroup parse handling https://bugs.webkit.org/show_bug.cgi?id=105837

Reviewed by Eric Seidel.

Source/WebCore:

Tests added to html5lib.

* html/parser/HTMLTreeBuilder.cpp:
(WebCore::HTMLTreeBuilder::processEndTag):

LayoutTests:

* html5lib/resources/template.dat:


Canonical link: https://commits.webkit.org/124030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138546 268f45cc-cd09-0410-ab3c-d52691b4dbfc